--- a/_includes/version_links.html
+++ b/_includes/version_links.html
@@ -83,7 +83,7 @@
     {% endcapture %}
 
     {% if internal_transcripts contains "<li>" or ext_transcripts contains "<li>" %}
-      <p style="margin-bottom: 0.5rem;"><strong>Transcriptions available:</strong></p>
+      <p style="margin-bottom: 0.5rem;"><strong>Transcripts available:</strong></p>
       <ul style="margin-top: 0;">
         {{ internal_transcripts }}
         {{ ext_transcripts }}
