--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -79,7 +79,7 @@ layout: default
         {% assign base_asset_path = '/assets/sources/' | relative_url %}
 
         {% if auto_tmx_file %}
-            <a href="{{ '/viewer/' | relative_url }}?file={{ auto_tmx_file }}" target="_blank" style="
+            <a href="{{ '/tmx_viewer/' | relative_url }}?file={{ auto_tmx_file }}" target="_blank" style="
                 text-decoration: none; 
                 background-color: #f3e5f5; 
                 color: #7b1fa2; 
