--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -68,7 +68,7 @@ layout: default
 
     {% comment %} 
        STEP B: DISPLAY THE BAR 
-       Show if we found an Auto-TMX OR if manual links exist
+       Show if we found an Auto-TMX OR if sources materials exist
     {% endcomment %}
 
     {% if auto_tmx_file or page.source_link or page.transcription_link or page.tmx_link %}
